Refactor and optimize save() in JwtUserDetailsService class